# iotflow-distributed-system

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
apps/ingestion/: Dockerfile  handlers.py  kafka_producer.py  main.py  metrics.py  rate_limiter.py  requirements.txt
apps/worker/: Dockerfile  config.py  consumer.py  db.py  handlers.py  idempotency.py  main.py  metrics.py  processor.py  requirements.txt  retry.py
docs/: ROADMAP.md  STRATEGIC_ISSUES.md  api_design.md  architecture.md  capacity_planning.md  data_model.md  design_decisions.md  failover_analysis.md  failures.md  high_scale_upgrade.md  retry_dlq_design.md  scaling.md  scaling_tradeoffs.md  system_design.md
infra/db/migrations/: 001_initial.sql
infra/grafana/provisioning/dashboards/: dashboards.yml  iotflow.json
infra/k8s/: ingestion.yaml  worker.yaml
infra/mosquitto/: mosquitto.conf
infra/prometheus/: prometheus.yml
libs/shared/: logging.py  metrics.py  models.py  pipeline.py
scripts/: simulate_iot.py
services/ingestion/: Dockerfile  config.py  kafka_producer.py  main.py  metrics.py  rate_limiter.py
services/worker/: Dockerfile  consumer.py  db.py  idempotency.py  main.py  metrics.py  processor.py  retry.py
