[project]
name = "iotflow"
version = "2.1.0"
description = "Scalable Reference Architecture for IoT Event Pipelines"
authors = [
    {name = "Umesh Saruk", email = "umesh@example.com"}
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "aiomqtt>=2.2.0",
    "aiokafka>=0.11.0",
    "redis>=5.0.8",
    "pydantic-settings>=2.4.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.20.0",
    "asyncpg>=0.29.0",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
